--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -11,7 +11,7 @@
 }
 
 .header {
-    background-color: #0E0E0E;
+    background-color: #0e0e0ebf;
     padding: 20px 0px;
     color: #fff;
     position: fixed;
