--- a/src/components/Title/index.module.scss
+++ b/src/components/Title/index.module.scss
@@ -2,7 +2,7 @@
     line-height: normal;
     text-transform: uppercase;
     display: inline-block;
-    padding: 10px;
+    padding-bottom: 10px;
 }
 .title__text{
 font-size: 2.4rem;
