--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -62,10 +62,18 @@
 }
 
 .swiper-pagination {
-  margin-bottom: 5.8rem;
+  margin-bottom: 8.4rem;
+  margin-top: 100px;
+}
+.swiper-slide{
+ 
+  max-height: 700px;
+  padding: 0;
+ 
 }
 .slick-slide{
   text-align: center;
+ 
 }
 @media only screen and (max-width:600px){
 .slick-next{
