--- a/src/pages/ProductsPage/style.module.scss
+++ b/src/pages/ProductsPage/style.module.scss
@@ -1,8 +1,90 @@
-.catalog_page{
-    width: 100%;
-    background-color: #EDEDED;
-    padding: 10px 0;
-}
-.Main{
+.product__container {
     display: flex;
+    gap: 24px;
+    margin-bottom: 90px;
+    align-items:flex-start ;
+}
+
+.filter {
+    min-width: 264px;
+    background-color: black;
+    color: #fff;
+    padding-top: 5px;
+    border-top: 3px solid rgba(197, 55, 32, 1);
+}
+
+.filter__category-button {
+    color: #fff;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 400;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: 12px;
+    position: relative;
+    &:hover{
+        background-color: rgba(197, 55, 32, 1);
+    }
+    &::after{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        content: '';
+        background: url(../../img/str-right.svg) no-repeat center center;
+        right: 12px;
+    }
+}
+.filter__category-button--active{
+    color: #fff;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 400;
+    border: none;
+    background-color: rgba(197, 55, 32, 1);
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: 12px;
+    position: relative;
+    &::after{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        content: '';
+        background: url(../../img/str-bottom.svg) no-repeat center center;
+        right: 12px;
+    }
+}
+.category__drop-list{
+    background-color: rgba(45, 45, 45, 1);
+    
+}
+.category__drop-item{
+    opacity: 0.5;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    padding: 12px;
+    border-bottom: 1px rgb(255, 255, 255,0.5) solid;
+    cursor: pointer;
+    &:hover{
+        background: #1D1D1D
+    }
+    
+}
+.category__drop-item--active{
+    border-bottom: 1px rgb(255, 255, 255) solid;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    padding: 12px;
+    cursor: pointer;
+    background: #1D1D1D;
 }
