--- a/src/components/SelectionInput/index.module.scss
+++ b/src/components/SelectionInput/index.module.scss
@@ -19,5 +19,8 @@
     box-sizing: border-box;
     justify-content: space-between
 }
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 
 
