--- a/src/components/ProductCard/index.module.scss
+++ b/src/components/ProductCard/index.module.scss
@@ -1,29 +1,41 @@
-.product__item{
+.product__item {
     border: 1px solid rgba(29, 29, 29, 0.5);
     max-width: 264px;
 }
-.product__text-wrapper{
-    padding:19px 11px ;
+
+.product__text-wrapper {
+    padding: 19px 11px;
     background-color: rgba(29, 29, 29, 1);
     color: #fff;
 }
-.product__item-text{
-font-size: 1.6rem;
-font-style: italic;
-font-weight: 400;
-word-wrap: break-word;
-text-transform: uppercase;
-margin-bottom: 12px;
+
+.product__item-text {
+    font-size: 1.6rem;
+    font-style: italic;
+    font-weight: 400;
+    word-wrap: break-word;
+    text-transform: uppercase;
+    margin-bottom: 12px;
 }
-.product__item-date{
+
+.product__item-date {
     font-size: 1.2rem;
-font-weight: 800;
-margin-bottom: 24px;
-margin-top: 12px;
+    font-weight: 800;
+    margin-bottom: 24px;
+    margin-top: 12px;
 }
-.product__item-status{
+
+.product__item-status {
     font-size: 1.2rem;
     margin-bottom: 8px;
     text-transform: uppercase;
     color: rgba(60, 192, 81, 0.7);
+}
+@media only screen and (max-width:320px){
+    .product__item{
+        max-width: 180px;
+        .product__item-img{
+            width: 100%;
+        }
+    }
 }
