--- a/src/components/section/News/index.module.scss
+++ b/src/components/section/News/index.module.scss
@@ -24,7 +24,7 @@
     color: #fff;
     position: relative;
     &::before{
-        width: 360px;
+        width: 100%;
         height: 284px;
         position: absolute;
         content: '';
@@ -38,8 +38,8 @@
         position: absolute;
         content: '';
         background: url(../../../img/logo.png) no-repeat center center;
+        left: calc(50% - 84px);
         top: 100px;
-        left: 100px;
         opacity: 0;
     }
    &:hover{
@@ -51,6 +51,7 @@
         opacity: 1;
         transition: 0.5s;
     }
+
     .news__button{
         background: url(../../../img//news-btn-orange.svg);
         transition: 0.5s;
@@ -88,4 +89,24 @@
 }
 .news__button-wrapper{
     text-align: center;
+}
+@media only screen and (max-width:735px){
+ .news__list{
+    flex-direction: column;
+ }
+ .news__item{
+    margin:  10px auto;
+ }
+}
+@media only screen and (max-width:400px){
+.news__item{
+    width: 90%;
+    &::before{
+        height: 260px;
+    }
+}
+.news__item-img{
+    max-width: 100%;
+    height: auto;
+}
 }
