--- a/src/components/section/Partners/index.module.scss
+++ b/src/components/section/Partners/index.module.scss
@@ -1,11 +1,12 @@
 .partners {
     margin: 80px 0px;
-
+   
 }
 
 .partners__wrapper {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .partners__item {
