--- a/src/components/section/ProductsMain/index.module.scss
+++ b/src/components/section/ProductsMain/index.module.scss
@@ -3,4 +3,11 @@
     gap: 24px;
     flex-wrap: wrap;
     margin-bottom: 30px;
+    width: 100%;
+}
+@media only screen and (max-width:580px){
+    .product__list{
+        justify-content: space-around;
+        
+    }
 }
