--- a/src/pages/ContactPage/index.module.scss
+++ b/src/pages/ContactPage/index.module.scss
@@ -1,27 +1,37 @@
-.contact__wrapper{
+.contact__wrapper {
     margin-top: 36px;
-    display: flex ;
+    display: flex;
     margin-bottom: 88px;
 }
-.contact__text-wrapper{
+
+.contact__text-wrapper {
     width: 50%;
     padding: 82px 62px;
-   color: #fff;
-   background-color: rgba(29, 29, 29, 1);
-   font-size: 1.6rem;
+    color: #fff;
+    background-color: rgba(29, 29, 29, 1);
+    font-size: 1.6rem;
 }
-.contact__iframe{
+
+.contact__iframe {
     width: 50%;
 }
-.contact__info-title{
+
+.contact__info-title {
     font-size: 2.4rem;
     margin-bottom: 40px;
 }
-.contact__info-tel, .contact__info-tel , .contact__info-loc, .contact__info-date, .contact__info-email{
+
+.contact__info-tel,
+.contact__info-tel,
+.contact__info-loc,
+.contact__info-date,
+.contact__info-email {
     margin-bottom: 16px;
     padding-left: 36px;
     position: relative;
-    &::after{
+    flex-shrink: 0;
+    min-width: 220px;
+    &::after {
         width: 20px;
         height: 20px;
         position: absolute;
@@ -29,38 +39,79 @@
         left: 0;
     }
 }
-.contact__info-tel{
-    &::after{
+
+.contact__info-tel {
+    &::after {
         background: url(../../img/tel.svg);
     }
 }
-.contact__info-email{
-    &::after{
+
+.contact__info-email {
+    &::after {
         background: url(../../img/sms.svg) no-repeat;
     }
 }
-.contact__info-date{
-    &::after{
+
+.contact__info-date {
+    &::after {
         background: url(../../img/date.svg) no-repeat;
     }
 }
-.contact__info-loc{
-    &::after{
+
+.contact__info-loc {
+    &::after {
         background: url(../../img/addres.svg) no-repeat;
     }
 }
-.contact__info-loc{
+
+.contact__info-loc {
     margin-bottom: 30px;
 }
-.ask{
+
+.ask {
     background: url(../../img/ak-bg.jpg);
-   
+
 }
-.ask__gradient{
+
+.ask__gradient {
     background: url(../../img/ask-gr.png);
     padding-top: 88px;
 }
-.ask__form-wrapper{
+
+.ask__form-wrapper {
     max-width: 648px;
     margin: 0 auto;
+}
+@media only screen and (max-width:700px){
+.contact__text-wrapper{
+    padding: 40px;
+}
+}
+@media only screen and (max-width:600px){
+.contact__wrapper{
+    flex-direction: column-reverse;
+}
+.contact__iframe{
+    width: 100%;
+    height: auto;
+    height: 320px;
+}
+.contact__text-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+   
+}
+}
+@media only screen and (max-width:550px){
+.contact__text-wrapper{
+    padding: 52px 15px;
+}
+}
+@media only screen and (max-width:490px){
+.contact__text-wrapper{
+    flex-direction: column;
+    padding: 60px 24px;
+}
 }
