--- a/src/pages/ProductsPage/style.module.scss
+++ b/src/pages/ProductsPage/style.module.scss
@@ -5,3 +5,8 @@
     align-items:flex-start ;
 }
 
+@media only screen and (max-width:645px){
+    .product__container{
+        flex-direction: column;
+    }
+}
