--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -13,10 +13,13 @@
   flex-wrap: wrap;
 
 }
-
+.footer__logo{
+  width: 16.8rem;
+  height: 7.4rem;
+}
 .footer__link {
   color: #fff;
-
+  text-transform: uppercase;
   font-size: 1.2rem;
   line-height: 15px;
   letter-spacing: 0em;
