--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -14,7 +14,7 @@
     z-index: 99;
     background-color: rgba(0, 0, 0, 0.9);
     min-width: 288px;
-    padding: 10px 0px;
+    padding: 1rem 0px;
     animation-name: dropdown;
     animation-duration: 400ms;
     &::after {
@@ -37,7 +37,7 @@
     display: block;
     position: relative;
     font-size: 1.2rem;
-    padding: 15px 10px;
+    padding: 1.5rem 1rem;
     color: #fff;
     &:hover {
         background: #C53720;
