--- a/src/components/Loader/loader.scss
+++ b/src/components/Loader/loader.scss
@@ -1,7 +1,7 @@
 .loader {
     position: relative;
     width: 105px;
-    margin: 0 auto;
+    margin: 40px auto;
     height: 50vh;
     background-repeat: no-repeat;
     background-image: linear-gradient(#c53720 90px, transparent 0),
