--- a/src/components/Search/index.module.scss
+++ b/src/components/Search/index.module.scss
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     left: 0;
-    background: rgb(29, 29, 29, 0.7);
+    background: rgb(29, 29, 29, 0.8);
     top: 100px;
     z-index: 9;
     padding: 15px 0px;
@@ -85,4 +85,9 @@
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 0em;
+}
+@media only screen and (max-width:870px){
+    .search{
+        top: 82px;
+    }
 }
