logo is changed

--- a/src/components/section/NewsSection/index.module.scss
+++ b/src/components/section/NewsSection/index.module.scss
@@ -13,7 +13,7 @@
         width: 236px;
         height: 104px;
         content: '';
-        background: url(../../../img//logo.png) no-repeat center center;
+        background: url(../../../img//logo.jpg) no-repeat center center;
         left: 20%;
         top: calc(50% - 52px);
     }
