--- a/src/components/section/News/index.module.scss
+++ b/src/components/section/News/index.module.scss
@@ -37,7 +37,7 @@
         height: 74px;
         position: absolute;
         content: '';
-        background: url(../../../img/logo.png) no-repeat center center;
+        background: url(../../../img/logo.jpg) no-repeat center center;
         left: calc(50% - 84px);
         top: 100px;
         opacity: 0;
