--- a/src/components/section/Info/index.module.scss
+++ b/src/components/section/Info/index.module.scss
@@ -58,12 +58,13 @@
     font-size: 1.6rem;
     line-height: 20px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: center;
 }
 
 .info__button-wrapper {
-    margin-left: 30px;
     padding-bottom: 3rem;
+    margin: 10px auto;
+    max-width: 150px;
 }
 
 .info__recwrapper {
