--- a/src/pages/ContactPage/index.module.scss
+++ b/src/pages/ContactPage/index.module.scss
@@ -18,9 +18,11 @@
 
 .contact__info-title {
     font-size: 2.4rem;
-    margin-bottom: 40px;
+    margin-bottom: 1.5rem;
 }
-
+.contact__column{
+    margin-bottom: 2.5rem;
+}
 .contact__info-tel,
 .contact__info-tel,
 .contact__info-loc,
@@ -31,6 +33,8 @@
     position: relative;
     flex-shrink: 0;
     min-width: 220px;
+    color: #fff;
+  
     &::after {
         width: 20px;
         height: 20px;
