--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -1,9 +1,18 @@
 @import url('https://fonts.cdnfonts.com/css/ramabhadra');
-
+@keyframes dropdown{
+    0%{
+        top: 0px;
+    }
+    100%{
+        top: 30px;
+    }
+ }
 .dropdown {
     position: absolute;
     padding-top: 1rem;
     z-index: 99;
+    animation-name: dropdown;
+    animation-duration: 400ms;
   
 }
 .dropdown__list{
@@ -21,8 +30,17 @@
     }
 }
 
+
 .dropdown__item {
     border-bottom: 1px solid black;
+    &:hover{
+      .dropdown__drop{
+        display: block;
+      }
+    }
+}
+.dropdown__drop{
+    display: none;
 }
 
 .dropdown__link,.dropdown__button {
