logo:box-shadow is changed-3

--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -27,6 +27,7 @@
     z-index: 99;
     width: 100%;
     max-width: 1640px;
+    backdrop-filter: drop-shadow(4px 4px 10px blue);
 }
 
 .header__container {
