--- a/src/components/Hamburger/index.module.scss
+++ b/src/components/Hamburger/index.module.scss
@@ -32,26 +32,29 @@
  }
 
 .hamburger{
-    display: block;
-    position: fixed;
+    //display: block;
+    position: absolute;
     background-color: rgb(14, 14, 14,0.85);
-    top: 90px;
+    backdrop-filter:blur(5px);
+    top: 80px;
     left: 0;
     width: 40%;
     height: 100vh;
-    z-index: 9;
+    z-index: 19;
     animation-name: hamburger;
     animation-duration: 500ms;
+
 }
 .hamburger--close{
     position: fixed;
     background-color: rgb(14, 14, 14,0.85);
-    top: 90px;
+    top: 80px;
     left: -120%;
     width: 40%;
     height: 100vh;
     animation-name: hamburger-close;
     animation-duration: 900ms;
+    backdrop-filter:blur(5px);
     //display: none;
 }
 .hamburger__button , .hamburger__close-button{
@@ -118,6 +121,7 @@
     padding: 10px 0px;
     animation-name: dropdown;
     animation-duration: 400ms;
+    backdrop-filter:blur(5px);
     &::after {
         position: absolute;
         width: 94px;
@@ -146,10 +150,11 @@
     width: 100%;
     height: 100vh;
     position: fixed;
-    top: 100px;
-    background-color: rgb(14, 14, 14);
-    opacity: 0.4;
+    top: 80px;
+    background-color: rgb(14, 14, 14,0.4);
+    //opacity: 0.4;
     left: 0;
+    backdrop-filter:blur(5px);
 }
 .hamburger__button-wrapper{
     text-align: center;
@@ -179,13 +184,13 @@
 }
 @media only screen and (max-width:500px){
     .hamburger{
-        top: 73px;
+        top: 72px;
     }
     .hamburger__gradient{
-        top: 73px;
+        top: 72px;
     }
     .hamburger--close{
-        top: 73px;
+        top: 72px;
     }
     .hamburger__item{
         margin: 20px;
