--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -19,7 +19,7 @@
  }
 
 .header {
-    background-color: rgba(14, 14, 14, 0.749);
+    background-color: rgba(14, 14, 14, 0.749) ;
     padding: 20px 0;
     color: #fff;
     position: fixed;
@@ -27,7 +27,15 @@
     z-index: 99;
     width: 100%;
     max-width: 1640px;
-    backdrop-filter: drop-shadow(4px 4px 10px blue);
+  &::after{
+    width: 100%;
+    height: 100%;
+    content: '';
+    backdrop-filter:blur(5px);
+    z-index: -1;
+    position: absolute;
+    top: 0;
+  }
 }
 
 .header__container {
