--- a/src/components/ProductCard/index.module.scss
+++ b/src/components/ProductCard/index.module.scss
@@ -21,8 +21,7 @@
 .product__item-date {
     font-size: 1.2rem;
     font-weight: 800;
-    margin-bottom: 24px;
-    margin-top: 12px;
+   
 }
 
 .product__item-status {
@@ -30,6 +29,12 @@
     margin-bottom: 8px;
     text-transform: uppercase;
     color: rgba(60, 192, 81, 0.7);
+}
+.product__item-status-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    margin: 2rem 0;
 }
 @media only screen and (max-width:320px){
     .product__item{
