--- a/src/components/section/NewsSection/index.module.scss
+++ b/src/components/section/NewsSection/index.module.scss
@@ -1,31 +1,38 @@
 .news{
     margin-bottom: 88px;
 }
-.news__info {
+.news__body{
+    width: 100%;
+    display: flex;
     margin-top: 36px;
     margin-bottom: 26px;
-    background: url(../../../img//newssection-bg.jpg) no-repeat;
+}
+.news__intro {
+    width: 50%;
+    background-image: url("../../../img/newsbg.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     position: relative;
-     
-    &::after {
+    &::after{
         position: absolute;
-        width: 236px;
-        height: 104px;
+        width: 10rem;
+        height: 10rem;
         content: '';
-        background: url(../../../img//logo.jpg) no-repeat center center;
-        left: 20%;
-        top: calc(50% - 52px);
+        background: url(../../../img/autozone-logo.png) no-repeat center center;
+        filter: drop-shadow(0px 0px 3px white);
+        background-size: cover;
+        top: calc(50% - 5rem);
+        left: calc(50% - 5rem);
     }
 
 }
-
+.news__info{
+    width: 50%;
+}
 .news__info-text-wrapper {
     padding: 24px;
     background-color: rgba(29, 29, 29, 1);
     color: #fff;
-    max-width: 528px;
-    margin-left: auto;
 }
 
 .news__info-date {
@@ -44,26 +51,17 @@
     font-size: 1.6rem;
     margin-bottom: 24px;
 }
-@media only screen and (max-width:1000px){
-.news__info{
-    &::after{
-        left: 10%;
+
+@media only screen and (max-width:700px){
+    .news__body{
+        flex-direction: column;
     }
-}
-}
-@media only screen and (max-width:840px){
+    .news__intro{
+        width: 100%;
+        height: 30rem;
+    }
+    
     .news__info{
-        &::after{
-            width: 186px;
-            height: 84px;
-            left: 0%;
-        }
+        width: 100%;
     }
-}
-@media only screen and (max-width:730px){
-.news__info{
-&::after{
-    display: none;
-}
-}
 }
