--- a/src/components/ProductCard/index.module.scss
+++ b/src/components/ProductCard/index.module.scss
@@ -27,8 +27,12 @@
 .product__item-status {
     font-size: 1.2rem;
     margin-bottom: 8px;
-    text-transform: uppercase;
     color: rgba(60, 192, 81, 0.7);
+}
+.product__item-span{
+    font-size: 1.2rem;
+    margin-right: 1rem;
+    color: #C53720;
 }
 .product__item-status-wrapper{
     display: flex;
