--- a/src/components/section/Info/index.module.scss
+++ b/src/components/section/Info/index.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     //justify-content: space-between;
     align-items: flex-start;
-    margin-top: 100px;
+    margin-top: 6rem;
 
 }
 
