--- a/src/components/section/Sponsors/index.module.scss
+++ b/src/components/section/Sponsors/index.module.scss
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
     margin: 32px auto;
     max-width: 1128px;
-    justify-content: space-evenly;
+    //justify-content: space-around;
 }
 
 .sponsors__item {
@@ -21,8 +21,10 @@
     background-color: white;
     margin-bottom: 24px;
     width: 264px;
-    margin-right: 10px;
-    
+    margin-right: 1rem;
+//    &:last-child{
+//    margin-right: 0;
+//    }
 }
 .sponsors__item-img{
     display: block;
@@ -40,4 +42,17 @@
 }
 .sponsors__button{
     text-align: center;
+}
+@media only screen and (max-width:1130px){
+    .sponsors__list{
+        justify-content: space-evenly;
+    }
+    .sponsors__item{
+        margin-right: 2rem;
+    }
+}
+@media only screen and (max-width:1130px){
+    .sponsors__item{
+        margin-right: 1rem;
+    }
 }
