--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -49,6 +49,14 @@
   display: block;
   padding-left: 25px;
   position: relative;
+  &::after{
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    left: 0;
+    content: '';
+    background: url(../../../img/tel-footer.svg) no-repeat center center;
+  }
 }
 
 .footer__info {
