--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -20,7 +20,7 @@
 
 .header {
     background-color: rgba(14, 14, 14, 0.749) ;
-    padding: 20px 0;
+    padding: 1rem 0;
     color: #fff;
     position: fixed;
     top: 0;
