--- a/src/components/ProductCard/index.module.scss
+++ b/src/components/ProductCard/index.module.scss
@@ -1,23 +1,56 @@
 .product__item {
-    border: 1px solid rgba(29, 29, 29, 0.5);
+    //border: 1px solid rgba(29, 29, 29, 0.5);
     max-width: 264px;
+    border-radius: 2rem ;
+    box-sizing: border-box;
 }
 
 .product__text-wrapper {
-    padding: 19px 11px;
+    padding: 1.9rem 1.1rem;
     background-color: rgba(29, 29, 29, 1);
+    padding-top: 1.1rem;
     color: #fff;
+     border-radius:0 0 1rem 1rem;
 }
-
+.product__category__list{
+    display: flex;
+    max-width: 100%;
+    justify-content: space-between;
+}
+.product__category-list-item{
+    font-size: 1.1rem;
+    background-color: rgba(86, 86, 86, 0.5);
+    border-radius: 2rem;
+    max-width: 30%;
+    padding: 0.5rem 1rem;
+    text-overflow: ellipsis;
+     text-transform: lowercase;
+    /* Required for text-overflow to do anything */
+    white-space: nowrap;
+    overflow: hidden;
+}
 .product__item-text {
     font-size: 1.6rem;
     font-style: italic;
     font-weight: 400;
     word-wrap: break-word;
     text-transform: uppercase;
-    margin-bottom: 12px;
+    margin: 1.7rem 0;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
-
+.product__item-description{
+    font-size: 1.4rem;
+    margin: 1.2rem 0.5rem;
+    color: rgb(128, 128, 128,0.8);
+    max-width: 100%;
+    font-weight: 500;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
 .product__item-date {
     font-size: 1.2rem;
     font-weight: 800;
@@ -33,6 +66,17 @@
     font-size: 1.2rem;
     margin-right: 1rem;
     color: #C53720;
+}
+.product__item-img{
+    border: none;
+    display: block;
+    border-radius: 1rem 1rem 0 0;
+}
+.product__item-price{
+    text-align: right;
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-bottom: 1.2rem;
 }
 .product__item-status-wrapper{
     display: flex;
