--- a/src/components/SelectionInput/index.module.scss
+++ b/src/components/SelectionInput/index.module.scss
@@ -7,7 +7,7 @@
     font-style: normal;
     font-weight: 800;
     line-height: normal;
-
+    width: 45%;
     &:focus {
         outline: none;
     }
