--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -48,11 +48,12 @@
   color: #fff;
   display: block;
   padding-left: 25px;
+  font-size: 1.5rem;
   position: relative;
   &::after{
     position: absolute;
-    width: 2rem;
-    height: 2rem;
+    width: 20px;
+    height: 20px;
     left: 0;
     content: '';
     background: url(../../../img/tel-footer.svg) no-repeat center center;
