product page created

--- a/src/components/section/Partners/index.module.scss
+++ b/src/components/section/Partners/index.module.scss
@@ -1,6 +1,7 @@
 .partners {
-    margin: 80px 0px;
-   
+    margin-top: 5rem;
+    padding: 3rem 0px;
+    background-color: #fff;
 }
 
 .partners__wrapper {
