--- a/src/components/ProductCard/index.module.scss
+++ b/src/components/ProductCard/index.module.scss
@@ -15,19 +15,24 @@
 .product__category__list{
     display: flex;
     max-width: 100%;
-    justify-content: space-between;
 }
 .product__category-list-item{
     font-size: 1.1rem;
     background-color: rgba(86, 86, 86, 0.5);
     border-radius: 2rem;
-    max-width: 30%;
+    max-width: 32%;
     padding: 0.5rem 1rem;
     text-overflow: ellipsis;
      text-transform: lowercase;
     /* Required for text-overflow to do anything */
     white-space: nowrap;
     overflow: hidden;
+    margin-right: 5px;
+    flex-grow: 1;
+    text-align: center;
+    &:last-child{
+        margin-right: 0;
+    }
 }
 .product__item-text {
     font-size: 1.6rem;
