--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,7 +30,8 @@ body {
   font-family: "Inter", sans-serif;
   max-width: 1640px;
   margin: 0 auto;
-  
+  background: #EDEDED;
+
 }
 
 .container {
