--- a/src/components/section/FormSection/index.module.scss
+++ b/src/components/section/FormSection/index.module.scss
@@ -1,5 +1,6 @@
 .form{
     padding: 24px 40px;
+   // background-color: #fff;
 }
 .form__checkbox-wrapper{
     display: flex;
@@ -53,4 +54,28 @@
   .form__text{
     font-size: 1.6rem;
     color: #c53720;
+  }
+  .form__sended-img{
+    //width: 90%;
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    padding: 0rem  2rem;
+  }
+  .form__sended-title{
+    color: #3CC051;
+   // font-family: Abhaya Libre ExtraBold;
+    font-size: 1.8rem;
+    font-weight: 800;
+    line-height: 18.88px;
+    text-align: center;
+    padding:5rem 0;
+    padding-bottom: 10rem;
+    width: 30rem;
+    margin: 0 auto;
+  }
+  @media only screen and (max-width:450px){
+    .form__sended-img{
+      width: 90%;
+    }
   }
